# aigateway-monitoring

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/: release.yml
.github/workflows/: cd.yml  ci.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_capabilities_jsonb.py
src/aigw_monitor/: __init__.py  cli.py  logging.py  scheduler.py  service.py  settings.py
src/aigw_monitor/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/aigw_monitor/checks/: __init__.py  capabilities.py  client.py  probes.py  result.py  runner.py
src/aigw_monitor/config/: __init__.py  loader.py  schema.py
src/aigw_monitor/db/: __init__.py  base.py  models.py  repository.py
src/aigw_monitor/metrics/: __init__.py  prometheus.py
tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_probes.py
